2006-02-04  David Hampton  <david@dhcp-15.rainbolthampton.net>

	* src/register/ledger-core/split-register.c:
	* src/gnome-utils/gnc-tree-view-account.c: Get gnucash to compile
	with gcc4.1.

2006-02-04  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/gnc-numeric.c:
	  - Fixes for handling reciprocal values.
	  - Mark a lot of places where potential overflow bugs
	    are not handled.

2006-02-04  Joshua Sled  <jsled@asynchronous.org>

	* src/doc/xml/gnucash-v2.rnc: Add reverse-engineered schema for
	"v2" (1.8/2.0) XML files.

	* src/backend/file/io-gncxml-v2.c (write_v2_header): Emit
	'fs' (FreqSpec), 'bgt', 'recurrence' (Budgeting), and 'lot'
	namespace decls.

2006-02-04  David Hampton  <hampton@employees.org>

	* src/import-export/schemas/Makefile.am:
	* src/import-export/hbci/schemas/Makefile.am:
	* src/business/business-gnome/schemas/Makefile.am:
	* src/gnome-utils/schemas/Makefile.am:
	* src/gnome/schemas/Makefile.am: Don't just install the schema
	files, also install the gconf objects into the database. Reverts
	accidental change made as part of r12863.

2006-02-04  Joshua Sled  <jsled@asynchronous.org>

	* src/report/report-system/html-document.scm
	(gnc:html-document-headline): Add a headline property to the
	html-document record.

	* src/report/report-system/html-style-sheet.scm
	(gnc:html-style-sheet-render): Add headline-copy, better comment.

	* src/report/stylesheets/stylesheet-plain.scm (plain-renderer) 
	* src/report/stylesheets/stylesheet-fancy.scm (fancy-renderer) 
	* src/report/stylesheets/stylesheet-easy.scm (easy-renderer):
	Use headline if available, fallback to title. 

	* src/business/business-reports/aging.scm (aging-renderer)
	* src/business/business-reports/owner-report.scm (reg-renderer): 
	Use strings in titles, markup for the richer headline. Bug#329369.

2006-02-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-commodity.c:
	* src/gnome-utils/gnc-tree-view-account.c: Add disambiguating